Added a new classs to the HTML & made the headers sticky

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
 
         <div id="main-section">
-            <div>
+            <div class="apartment-group">
                 <img class="apartment-img" src="images/Morocco.webp"/>
                 <div class="apartment-description">
                     <p><strong>Larbaa Beni Hassen, Morocco</strong></p>
@@ -106,7 +106,7 @@
                     <P><strong>$105</strong> night</P>  
                 </div>
             </div>
-            <div>
+            <div class="apartment-group">
                 <img class="apartment-img" src="images/LasPalmas.webp"/>
                 <div>
                     <div class="apartment-description">
@@ -123,7 +123,7 @@
                     </div>
                 </div>
             </div>
-            <div>
+            <div class="apartment-group">
                 <img class="apartment-img" src="images/Iraklio.jpeg"/>
                 <div class="apartment-description">
                     <p><strong>Las Palmas, Spain</strong></p>
@@ -138,7 +138,7 @@
                     <P><strong>$285</strong> night</P>  
                 </div>
             </div>
-            <div>
+            <div class="apartment-group">
                 <img class="apartment-img" src="images/ElSalobre.webp"/>
                 <div class="apartment-description">
                     <p><strong>El Salobre, Spain</strong></p>
@@ -153,7 +153,7 @@
                     <P><strong>$334</strong> night</P>  
                 </div>
             </div>
-            <div>
+            <div class="apartment-group">
                 <img class="apartment-img" src="images/LaMatanza.webp"/>
                 <div class="apartment-description">
                     <p><strong>La Matanza de Acentejo, Spain</strong></p>
@@ -168,7 +168,7 @@
                     <P><strong>$141</strong> night</P>
                 </div>
             </div>
-            <div>
+            <div class="apartment-group">
                 <img class="apartment-img" src="images/AgiosPavlos.webp"/>
                 <div class="apartment-description">
                     <p><strong>Agios Pavlos, Greece</strong></p>
@@ -183,7 +183,7 @@
                     <P><strong>$495</strong> night</P>  
                 </div>
             </div>
-            <div>
+            <div class="apartment-group">
                 <img class="apartment-img" src="images/AgiaFotia.webp"/>
                 <div class="apartment-description">
                     <p><strong>Agia Fotia, Greece</strong></p>
@@ -198,7 +198,7 @@
                     <P><strong>$559</strong> night</P>
                 </div>
             </div>
-            <div>
+            <div class="apartment-group">
                 <img class="apartment-img" src="images/Ye.webp"/>
                 <div class="apartment-description">
                     <p><strong>Ye, Spain</strong></p>
